[tool.poetry]
name = "lightclock-driver"
version = "0.1.0"
description = "Driver for lightclock events"
authors = ["Shawn Wallis <shawn.p.wallis@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
blinkt = "^0.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
pytest-cov = "^2.8.1"
black = "^19.10b0"
mypy = "^0.770"
pre-commit = "^2.3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
